--- a/index.html
+++ b/index.html
@@ -1,70 +1,33 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Below are the links to the CSS sheet which helps style this page and the Google Fonts style sheet for the Roboto font. -->
-    <link rel="stylesheet" type="text/css" href="jsstyle.css">
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <title>Meaningful Title or Logo Goes Here</title>
-      </head>
-      <body>
-        <!-- Logo and menu start here. -->
-        <div class="top-bar">
-          <div class="logo">
-            <p>Meaningful Title or Logo Goes Here</p>
-          </div>
-          <nav class="top-menu">
-            <ul>
-              <li>
-                <a class="current-page-link" href="index.html">Page 1</a>
-              </li>
-              <li>
-                <a href="page2.html">Page 2</a>
-              </li>
-              <li>
-                <a href="page3.html">Page 3</a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-        <!-- The actual page content starts here. -->
-        <div class="page-content">
-          <div class="main-section">
-            <h1>Header 1</h1>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            <p>Useful links:</p>
-            <ol>
-              <li>
-                <a href="https://www.w3schools.com" target="_blank">W3Schools</a>
-              </li>
-              <li>
-                <a href="https://jeansebastienmarier.com" target="_blank">My site</a>
-              </li>
-            </ol>
-            <h2>Subheader 1</h2>
-            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            <figure>
-              <img src="images/pointe-au-pere-1024px.jpg" alt="Phare de la Pointe-au-Père">
-                <figcaption>Le phare de Pointe-au-Père est situé à Rimouski, au Québec. Photo: Jean-Sébastien Marier</figcaption>
-              </figure>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <h2>Subheader 2</h2>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-              <p>What does "Hello, World!" mean? Here's Wikipedia's answer:</p>
-              <blockquote cite="https://en.wikipedia.org/wiki/%22Hello,_World!%22_program">
-              A "Hello, World!" program is a computer program that outputs or displays "Hello, World!" to a user. Being a very simple program in most programming languages, it is often used to illustrate the basic syntax of a programming language for a working program. It is often the very first program people write when they are new to a language.
-              </blockquote>
-              <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
-            </div>
-          </div>
-          <!--The footer starts here.-->
-          <div class="footer">
-            <div class="footer-content">
-              <p>©2017 Your Name | 
-                <a href="mailto:username@uottawa.ca">username@uottawa.ca</a>
-              </p>
-            </div>
-          </div>
-        </body>
-      </html>
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="">
+    </head>
+    <body>
+     <h1>L'eau est-elle réellement bleu?</h1>
+     <img src="mer-bleue.png" alt="">
+     <h2>Pourquoi dit-on que la mer est bleu si l'eau est incolore?</h2>
+     <p>Les vacanciers adorent l'idée de se prélacer dans de l'eau bleu. Des images de la mer bleu d'Espagne aux eaux de la Tourbière Mer-Bleu</p>
+     <iframe src="https://www.youtube.com/watch?v=8LSl4gB-2OI&ab_channel=crissdeuxfois" frameborder="0"></iframe>
+     <p>Pourtant les scientifiques sont formelles. L'eau est incolore. Alors d'où vient cette perspection d'eau bleu aux airs paradisiaques?</p>
+     <p>Québec science nous dit que ce phénomène réside dans l'absoprtion de la lumière par les molécules de l'eau. La lumière du soleil est composée de plusieurs longueurs d'ondes qui constituent le spectre des couleurs visibles.</p>
+     <iframe src="https://www.youtube.com/watch?v=IVMHpJP8tGk&ab_channel=Science%26Vie" frameborder="0"></iframe>
+     <p>En guise de conclusion je vous suggère de jeter un oeil sur cette conversation sur reedit</p>
+     <blockquote><iframe id="reddit-embed" src="https://www.redditmedia.com/r/ottawa/comments/78usj0/for_those_wondering_about_the_mer_bleue_bog_and/?ref_source=embed&amp;ref=share&amp;embed=true" sandbox="allow-scripts allow-same-origin allow-popups" style="border: none;" height="144" width="640" scrolling="no"></iframe></blockquote>
+<img src="boardwalk.jpg" alt="">
+<h3>Voici une liste non exhaustive d'endroits dans le monde où vous appercevrez la mer bleu</h3>
+<tr>sentier de la Tournière (ottawa)
+    Cala Goloritzè (Sardaigne)
+    Lac Malawi ( Mozambique)</tr>
+    </body>
+    </html>
+
